--- a/GasSensor.html
+++ b/GasSensor.html
@@ -87,6 +87,8 @@
                             <li>MH-Z14 NDIR CO2 Infrared Sensor Module MH-Z14A Carbon Dioxide Sensor for CO2 (0-5000ppm, Serial Spot PWM)</li>
                             <li>MQ-2, MQ-3, MQ-4, MQ-5, MQ-6, MQ-7, MQ-8, MQ-9, MQ-135 Smoke Detection liquefied Methane Gas Sensor Module</li>
                         </ul>
+                        The data gathered from the sensors listed above during the cooking process will constitute a chemical signature which will be used to analyze the cumulative gas concentration
+                        with respect to time. The gas sensor shell stores these sensors, and the hardware which extracts and processes data which includes a custom PCB and a Raspberry Pi Zero 2W.
                         When designing the gas sensor shell, much consideration was given to requirement 3. Both the chamber and shell structures have "lips" on top of them, making the structure
                         modular - allowing the use of any amount of gas sensors. One challenge I faced was designing a gas sensor shell that could be removed without removing the Raspberry Pi Zero 2W and the PCB
                         (these components were stored within the shell in the previous design made by my graduate student mentor). To overcome this, I used the concept of a dummy node from my data structures
