--- a/GasSensor.html
+++ b/GasSensor.html
@@ -26,7 +26,7 @@
         <nav id="nav">
             <ul class="links">
                 <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="2in1Spatula.html">Modular Gas Sensor Shell</a></li>
+                <li class="active"><a href="GasSensor.html">Modular Gas Sensor Shell</a></li>
             </ul>
             <ul class="icons">
                 <li><a href="https://www.linkedin.com/in/selim-emir-can" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
